<resources>
    <string name="app_name">Contacts App</string>
    <string name="email">Email</string>
    <string name="add_new_content">Add New Content</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="contact_details">Contact Details</string>
    <string name="username">UserName</string>
</resources>