<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/app_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        app:layout_constraintTop_toTopOf="@id/app_bar" />


    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="true"
        android:background="@drawable/text_filed_bg"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="true"
        android:background="@drawable/text_filed_bg"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="true"
        android:background="@drawable/text_filed_bg"
        android:hint="@string/description"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_text"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        android:layout_margin="20dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:padding="15dp"
        app:cornerRadius="15dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_rv"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        tools:listitem="@layout/contact_card"
        tools:itemCount="100"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>